HackWithTDX/force-app/main/default/objects/Resource__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
            <value>
                <fullName>Treatment Planning</fullName>
            </value>
            <value>
                <fullName>Patient Consultation</fullName>
            </value>
            <value>
                <fullName>Patient Education</fullName>
            </value>
            <value>
                <fullName>Medical Imaging</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>